# sandbox-fastapi

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  dockerfile.dev  pyproject.toml  run_dev.sh
migrations/models/: 0_20220316155339_init.sql  0_20221120145839_init.py  1_20220316170730_update.sql  2_20220507121225_update.sql
src/: main.py
src/models/database/: Cars.py  Users.py  __init__.py
src/routes/: car_router.py  root_router.py  user_router.py
src/utils/: db_manager.py  env_constants.py  log_manager.py
